--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div class="orb-top-left"></div>
   <div class="orb-bottom-right"></div>
   <div class="card">
-    <img src="/images/Logo.png" alt="Logo" class="logo">
+    <img src="images/wifi-log.png" alt="Logo" class="logo">
     <h1>نص تجريبي بالعربية</h1>
     <p>
       هذا نص تجريبي مكتوب باللغة العربية لعرض تصميم صفحة ويب بسيطة. يمكن استخدام هذا النص لاختبار التنسيق والتصميم.
