Adding Arabic Font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
   <title>صفحة تجريبية</title>
 
   <style>
@@ -19,7 +20,9 @@
       /* Pure black background */
       overflow-y: auto;
       position: relative;
-      font-family: 'Tahoma', 'Arial', sans-serif;
+      /* font-family: 'Tahoma', 'Arial', sans-serif;
+      direction: rtl; */
+      font-family: 'Amiri', serif;
       direction: rtl;
       /* for right-to-left text */
     }
